# AAGNAR

./: Get  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts  proguard-rules.pro
app/schemas/com.example.aagnar.data.local.AppDatabase/: 1.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/res/color/: bottom_nav_color.xml
app/src/main/res/drawable/: bubble_received.xml  bubble_sent.xml  call_accept_button_background.xml  call_end_button_background.xml  call_reject_button_background.xml  circle_background_red.xml  circle_status_away.xml  circle_status_offline.xml  circle_status_online.xml  edit_text_background.xml  ic_account_add.xml  ic_archive.xml  ic_attach.xml  ic_audio.xml  ic_call.xml  ic_call_active.xml  ic_call_answer.xml  ic_call_empty.xml  ic_call_end.xml  ic_call_failed.xml  ic_call_outgoing.xml  ic_chat.xml  ic_chat_empty.xml  ic_close.xml  ic_cloud_download.xml  ic_contacts.xml  ic_contacts_empty.xml  ic_delivered.xml  ic_document.xml  ic_download.xml  ic_exit.xml  ic_file.xml  ic_folder.xml  ic_group.xml  ic_hold.xml  ic_image.xml  ic_info.xml  ic_lock.xml  ic_lock_open.xml  ic_logout.xml  (+38 more)
app/src/main/res/layout/: activity_account_selection.xml  activity_call.xml  activity_chat.xml  activity_connection_test.xml  activity_create_group.xml  activity_group_chat.xml  activity_main.xml  activity_registration.xml  activity_sign_in.xml  dialog_add_contact.xml  dialog_edit_message.xml  fragment_call.xml  fragment_calls.xml  fragment_chats.xml  fragment_contacts.xml  (+18 more)
(+127 files in other folders)
